plugins { id 'com.android.application' }
android {
  namespace 'com.gx.id.tracker'
  compileSdk 34
  defaultConfig {
    applicationId "com.gx.id.tracker"
    minSdk 21
    targetSdk 34
    versionCode 1
    versionName "1.0"
  }
  buildTypes {
    release { minifyEnabled false; signingConfig signingConfigs.debug }
  }
  compileOptions { sourceCompatibility JavaVersion.VERSION_17; targetCompatibility JavaVersion.VERSION_17 }
}
dependencies {
  implementation 'androidx.appcompat:appcompat:1.6.1'
  implementation 'com.google.android.material:material:1.11.0'
  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
  implementation 'androidx.recyclerview:recyclerview:1.3.2'
  implementation 'androidx.cardview:cardview:1.0.0'
}
